welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:2: error: Missing closing brace `}' assumed here
var x:Int=0
^Poucet:6: error: ';' expected but 'while' found.
} while{sortieTrouvee()}
  ^Poucet:10: error: 'while' expected but '}' found.
}
^